Fix spacing of cards

--- a/style.css
+++ b/style.css
@@ -62,10 +62,10 @@
 .cardList {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-flow: row-wrap;
-  padding: 0;
-  margin: 0;
+  padding: 15px;
+  margin: 15px;
 }
 
 .image {
